--- a/components/beacon-tooltip.html
+++ b/components/beacon-tooltip.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="iframe.html" />
+    <link rel="next" href="flippable-card.html" />
     
     
     <link rel="prev" href="../chapters/general.html" />
@@ -943,7 +943,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="iframe.html">
+        <li class="chapter " data-level="1.4.13.2" data-path="flippable-card.html">
+            
+                <a href="flippable-card.html">
+            
+                    
+                    Flippable Card
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.3" data-path="iframe.html">
             
                 <a href="iframe.html">
             
@@ -956,7 +969,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.3" data-path="image.html">
+        <li class="chapter " data-level="1.4.13.4" data-path="image.html">
             
                 <a href="image.html">
             
@@ -969,7 +982,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.4" data-path="tex.html">
+        <li class="chapter " data-level="1.4.13.5" data-path="tex.html">
             
                 <a href="tex.html">
             
@@ -982,7 +995,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.5" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.13.6" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -995,7 +1008,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.6" data-path="runner.html">
+        <li class="chapter " data-level="1.4.13.7" data-path="runner.html">
             
                 <a href="runner.html">
             
@@ -1008,7 +1021,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.7" data-path="db-metrics.md">
+        <li class="chapter " data-level="1.4.13.8" data-path="db-metrics.md">
             
                 <span>
             
@@ -1021,7 +1034,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.8" data-path="realtime-metrics.md">
+        <li class="chapter " data-level="1.4.13.9" data-path="multi-cards.html">
+            
+                <a href="multi-cards.html">
+            
+                    
+                    MultiCard
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.10" data-path="realtime-metrics.md">
             
                 <span>
             
@@ -1034,7 +1060,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.9" data-path="text.html">
+        <li class="chapter " data-level="1.4.13.11" data-path="text.html">
             
                 <a href="text.html">
             
@@ -1047,7 +1073,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.10" data-path="news.html">
+        <li class="chapter " data-level="1.4.13.12" data-path="news.html">
             
                 <a href="news.html">
             
@@ -1060,7 +1086,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.11" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.13.13" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -1073,7 +1099,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.12" data-path="weather.html">
+        <li class="chapter " data-level="1.4.13.14" data-path="weather.html">
             
                 <a href="weather.html">
             
@@ -1086,7 +1112,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.13" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.13.15" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -1356,7 +1382,7 @@
                 </a>
                 
                 
-                <a href="iframe.html" class="navigation navigation-next " aria-label="Next page: IFrame">
+                <a href="flippable-card.html" class="navigation navigation-next " aria-label="Next page: Flippable Card">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1367,7 +1393,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"next":{"title":"IFrame","level":"1.4.13.2","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},"previous":{"title":"General","level":"1.4.13","depth":2,"path":"chapters/general.md","ref":"chapters/general.md","articles":[{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"path":"components/beacon-tooltip.md","ref":"components/beacon-tooltip.md","articles":[]},{"title":"IFrame","level":"1.4.13.2","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.3","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.13.4","depth":3,"path":"components/tex.md","ref":"components/tex.md","articles":[]},{"title":"Lesson Submit","level":"1.4.13.5","depth":3,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Runner","level":"1.4.13.6","depth":3,"path":"components/runner.md","ref":"components/runner.md","articles":[]},{"title":"Metric","level":"1.4.13.7","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"RealTimeMetrics","level":"1.4.13.8","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},{"title":"Text","level":"1.4.13.9","depth":3,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"News","level":"1.4.13.10","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},{"title":"Video Player","level":"1.4.13.11","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},{"title":"Weather","level":"1.4.13.12","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},{"title":"Wikipedia","level":"1.4.13.13","depth":3,"path":"components/wikipedia.md","ref":"components/wikipedia.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/beacon-tooltip.md","mtime":"2018-11-20T15:04:54.947Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T15:05:05.988Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"next":{"title":"Flippable Card","level":"1.4.13.2","depth":3,"path":"components/flippable-card.md","ref":"components/flippable-card.md","articles":[]},"previous":{"title":"General","level":"1.4.13","depth":2,"path":"chapters/general.md","ref":"chapters/general.md","articles":[{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"path":"components/beacon-tooltip.md","ref":"components/beacon-tooltip.md","articles":[]},{"title":"Flippable Card","level":"1.4.13.2","depth":3,"path":"components/flippable-card.md","ref":"components/flippable-card.md","articles":[]},{"title":"IFrame","level":"1.4.13.3","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.4","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.13.5","depth":3,"path":"components/tex.md","ref":"components/tex.md","articles":[]},{"title":"Lesson Submit","level":"1.4.13.6","depth":3,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Runner","level":"1.4.13.7","depth":3,"path":"components/runner.md","ref":"components/runner.md","articles":[]},{"title":"Metric","level":"1.4.13.8","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"MultiCard","level":"1.4.13.9","depth":3,"path":"components/multi-cards.md","ref":"components/multi-cards.md","articles":[]},{"title":"RealTimeMetrics","level":"1.4.13.10","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},{"title":"Text","level":"1.4.13.11","depth":3,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"News","level":"1.4.13.12","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},{"title":"Video Player","level":"1.4.13.13","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},{"title":"Weather","level":"1.4.13.14","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},{"title":"Wikipedia","level":"1.4.13.15","depth":3,"path":"components/wikipedia.md","ref":"components/wikipedia.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/beacon-tooltip.md","mtime":"2018-12-28T10:15:55.757Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-12-28T10:16:51.076Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
