--- a/components/unveil.html
+++ b/components/unveil.html
@@ -943,7 +943,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="iframe.html">
+        <li class="chapter " data-level="1.4.13.2" data-path="flippable-card.html">
+            
+                <a href="flippable-card.html">
+            
+                    
+                    Flippable Card
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.3" data-path="iframe.html">
             
                 <a href="iframe.html">
             
@@ -956,7 +969,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.3" data-path="image.html">
+        <li class="chapter " data-level="1.4.13.4" data-path="image.html">
             
                 <a href="image.html">
             
@@ -969,7 +982,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.4" data-path="tex.html">
+        <li class="chapter " data-level="1.4.13.5" data-path="tex.html">
             
                 <a href="tex.html">
             
@@ -982,7 +995,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.5" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.13.6" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -995,7 +1008,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.6" data-path="runner.html">
+        <li class="chapter " data-level="1.4.13.7" data-path="runner.html">
             
                 <a href="runner.html">
             
@@ -1008,7 +1021,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.7" data-path="db-metrics.md">
+        <li class="chapter " data-level="1.4.13.8" data-path="db-metrics.md">
             
                 <span>
             
@@ -1021,7 +1034,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.8" data-path="realtime-metrics.md">
+        <li class="chapter " data-level="1.4.13.9" data-path="multi-cards.html">
+            
+                <a href="multi-cards.html">
+            
+                    
+                    MultiCard
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.10" data-path="realtime-metrics.md">
             
                 <span>
             
@@ -1034,7 +1060,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.9" data-path="text.html">
+        <li class="chapter " data-level="1.4.13.11" data-path="text.html">
             
                 <a href="text.html">
             
@@ -1047,7 +1073,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.10" data-path="news.html">
+        <li class="chapter " data-level="1.4.13.12" data-path="news.html">
             
                 <a href="news.html">
             
@@ -1060,7 +1086,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.11" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.13.13" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -1073,7 +1099,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.12" data-path="weather.html">
+        <li class="chapter " data-level="1.4.13.14" data-path="weather.html">
             
                 <a href="weather.html">
             
@@ -1086,7 +1112,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.13" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.13.15" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -1359,7 +1385,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Unveil","level":"1.4.11.8","depth":3,"next":{"title":"Helper","level":"1.4.12","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.12.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.12.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.12.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.12.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Timer","level":"1.4.12.6","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"previous":{"title":"Switch","level":"1.4.11.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/unveil.md","mtime":"2018-11-20T15:04:55.083Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T15:05:05.988Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Unveil","level":"1.4.11.8","depth":3,"next":{"title":"Helper","level":"1.4.12","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.12.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.12.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.12.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.12.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Timer","level":"1.4.12.6","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"previous":{"title":"Switch","level":"1.4.11.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/unveil.md","mtime":"2018-12-28T10:15:56.061Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-12-28T10:16:51.076Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
