--- a/components/free-text-survey.html
+++ b/components/free-text-survey.html
@@ -943,7 +943,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="iframe.html">
+        <li class="chapter " data-level="1.4.13.2" data-path="flippable-card.html">
+            
+                <a href="flippable-card.html">
+            
+                    
+                    Flippable Card
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.3" data-path="iframe.html">
             
                 <a href="iframe.html">
             
@@ -956,7 +969,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.3" data-path="image.html">
+        <li class="chapter " data-level="1.4.13.4" data-path="image.html">
             
                 <a href="image.html">
             
@@ -969,7 +982,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.4" data-path="tex.html">
+        <li class="chapter " data-level="1.4.13.5" data-path="tex.html">
             
                 <a href="tex.html">
             
@@ -982,7 +995,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.5" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.13.6" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -995,7 +1008,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.6" data-path="runner.html">
+        <li class="chapter " data-level="1.4.13.7" data-path="runner.html">
             
                 <a href="runner.html">
             
@@ -1008,7 +1021,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.7" data-path="db-metrics.md">
+        <li class="chapter " data-level="1.4.13.8" data-path="db-metrics.md">
             
                 <span>
             
@@ -1021,7 +1034,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.8" data-path="realtime-metrics.md">
+        <li class="chapter " data-level="1.4.13.9" data-path="multi-cards.html">
+            
+                <a href="multi-cards.html">
+            
+                    
+                    MultiCard
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.10" data-path="realtime-metrics.md">
             
                 <span>
             
@@ -1034,7 +1060,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.9" data-path="text.html">
+        <li class="chapter " data-level="1.4.13.11" data-path="text.html">
             
                 <a href="text.html">
             
@@ -1047,7 +1073,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.10" data-path="news.html">
+        <li class="chapter " data-level="1.4.13.12" data-path="news.html">
             
                 <a href="news.html">
             
@@ -1060,7 +1086,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.11" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.13.13" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -1073,7 +1099,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.12" data-path="weather.html">
+        <li class="chapter " data-level="1.4.13.14" data-path="weather.html">
             
                 <a href="weather.html">
             
@@ -1086,7 +1112,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.13" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.13.15" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -1365,7 +1391,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"next":{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"previous":{"title":"Surveys","level":"1.4.10","depth":2,"path":"chapters/surveys.md","ref":"chapters/surveys.md","articles":[{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Muliple Choice Survey","level":"1.4.10.3","depth":3,"path":"components/multiple-choice-survey.md","ref":"components/multiple-choice-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.10.4","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.10.5","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-survey.md","mtime":"2018-11-20T15:04:54.999Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T15:05:05.988Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"next":{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"previous":{"title":"Surveys","level":"1.4.10","depth":2,"path":"chapters/surveys.md","ref":"chapters/surveys.md","articles":[{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Muliple Choice Survey","level":"1.4.10.3","depth":3,"path":"components/multiple-choice-survey.md","ref":"components/multiple-choice-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.10.4","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.10.5","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-survey.md","mtime":"2018-12-28T10:15:55.849Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-12-28T10:16:51.076Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
