--- a/components/video-player.html
+++ b/components/video-player.html
@@ -943,7 +943,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.2" data-path="iframe.html">
+        <li class="chapter " data-level="1.4.13.2" data-path="flippable-card.html">
+            
+                <a href="flippable-card.html">
+            
+                    
+                    Flippable Card
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.3" data-path="iframe.html">
             
                 <a href="iframe.html">
             
@@ -956,7 +969,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.3" data-path="image.html">
+        <li class="chapter " data-level="1.4.13.4" data-path="image.html">
             
                 <a href="image.html">
             
@@ -969,7 +982,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.4" data-path="tex.html">
+        <li class="chapter " data-level="1.4.13.5" data-path="tex.html">
             
                 <a href="tex.html">
             
@@ -982,7 +995,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.5" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.13.6" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -995,7 +1008,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.6" data-path="runner.html">
+        <li class="chapter " data-level="1.4.13.7" data-path="runner.html">
             
                 <a href="runner.html">
             
@@ -1008,7 +1021,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.7" data-path="db-metrics.md">
+        <li class="chapter " data-level="1.4.13.8" data-path="db-metrics.md">
             
                 <span>
             
@@ -1021,7 +1034,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.8" data-path="realtime-metrics.md">
+        <li class="chapter " data-level="1.4.13.9" data-path="multi-cards.html">
+            
+                <a href="multi-cards.html">
+            
+                    
+                    MultiCard
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13.10" data-path="realtime-metrics.md">
             
                 <span>
             
@@ -1034,7 +1060,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.9" data-path="text.html">
+        <li class="chapter " data-level="1.4.13.11" data-path="text.html">
             
                 <a href="text.html">
             
@@ -1047,7 +1073,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.10" data-path="news.html">
+        <li class="chapter " data-level="1.4.13.12" data-path="news.html">
             
                 <a href="news.html">
             
@@ -1060,7 +1086,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.13.11" data-path="video-player.html">
+        <li class="chapter active" data-level="1.4.13.13" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -1073,7 +1099,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.12" data-path="weather.html">
+        <li class="chapter " data-level="1.4.13.14" data-path="weather.html">
             
                 <a href="weather.html">
             
@@ -1086,7 +1112,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13.13" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.13.15" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -1304,7 +1330,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="video-player">Video Player</h1>
-<p>A component for playing media files and content from YouTube, SoundCloud and Vimeo.</p>
+<p>A component for playing media files and content from YouTube, SoundCloud, and Vimeo.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>VideoPlayer
     url<span class="token operator">=</span><span class="token string">&quot;https://www.youtube.com/watch?v=UzxYlbK2c7E&quot;</span>
@@ -1316,13 +1342,14 @@
 <ul>
 <li><strong>url</strong> | <code>string</code>: URL of the video. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>controls</strong> | <code>boolean</code>: indicates whether to display control elements of the video player. Default: <code>false</code>.</li>
-<li><strong>playing</strong> | <code>boolean</code>: indictes whether to automatically start playing the video. Default: <code>false</code>.</li>
+<li><strong>playing</strong> | <code>boolean</code>: indicates whether to automatically start playing the video. Default: <code>false</code>.</li>
 <li><strong>volume</strong> | <code>number</code>: volume of the player. Default: <code>0.8</code>.</li>
 <li><strong>center</strong> | <code>boolean</code>: controls whether to center the video player. Default: <code>true</code>.</li>
 <li><strong>height</strong> | <code>(string|number)</code>: height of the player. Default: <code>360</code>.</li>
 <li><strong>width</strong> | <code>(string|number)</code>: width of the player. Default: <code>640</code>.</li>
 <li><strong>loop</strong> | <code>boolean</code>: controls whether to start the video anew after it was played. Default: <code>false</code>.</li>
 <li><strong>voiceID</strong> | <code>string</code>: voice control identifier. Default: <code>none</code>.</li>
+<li><strong>startTime</strong> | <code>number</code>: number of seconds at which to start the video, or fraction if value is between 0 and 1. Default: <code>none</code>.</li>
 <li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onEnded</strong> | <code>function</code>: callback invoked once the video ends. Default: <code>onEnded() {}</code>.</li>
 <li><strong>onPause</strong> | <code>function</code>: callback invoked once the video pauses. Default: <code>onPause() {}</code>.</li>
@@ -1371,7 +1398,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.13.11","depth":3,"next":{"title":"Weather","level":"1.4.13.12","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},"previous":{"title":"News","level":"1.4.13.10","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2018-11-20T15:04:55.091Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T15:05:05.988Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.13.13","depth":3,"next":{"title":"Weather","level":"1.4.13.14","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},"previous":{"title":"News","level":"1.4.13.12","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2018-12-28T10:15:56.069Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-12-28T10:16:51.076Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
